--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ subtitle: by HTML5 UP
 email: fatima.sanchez.garcia@gmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "fatimasanchez.ca" # the base hostname & protocol for your site
+url: "fasanchez.github.io" # the base hostname & protocol for your site
 author:Fatima Sanchez
 street_address: 
 city: Ottawa  
