--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Forty
 subtitle: by HTML5 UP
 email: fatima.sanchez.garcia@gmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
-baseurl: "/fasanchez.github.io" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "fatimasanchez.ca" # the base hostname & protocol for your site
 author:Fatima Sanchez
 street_address: 
